k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: salt-bot
  labels:
    name: salt-bot
