k3s/postgres-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: salt-postgres
  namespace: salt-bot
spec:
  serviceName: "salt-postgres"
  replicas: 1
  selector:
    matchLabels:
      app: salt-postgres
  template:
    metadata:
      labels:
        app: salt-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          ports:
            - containerPort: 5434
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-pvc
