k3s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: salt-bot
spec:
  selector:
    app: salt-postgres
  ports:
    - port: 5434 # Service port that other pods will connect to
      targetPort: 5434 # Container port in the postgres pod
      name: postgres
  clusterIP: None
